goodbye toooo youuuu

--- a/_client/index.html
+++ b/_client/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Webpack App</title>
+    <title>Senna!</title>
   </head>
   <body>
     <script src="/vendor/phaser.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
+    <section id="gameScreen" class="game-screen"></section>
   </body>
 </html>
